--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -83,3 +83,4 @@ features:
     url: 'https://github.com/HugoBlox/hugo-blox-builder/'
     content_dir: starters/blog/content
     branch: main
+custom_css: css/custom.css
