--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -72,7 +72,7 @@ taxonomies:
 markup:
   _merge: deep
   highlight:
-    style: monokai
+    style: github-dark
 related:
   threshold: 80
   includeNewer: true
