代码块颜色测试修改

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -72,7 +72,10 @@ taxonomies:
 markup:
   _merge: deep
   highlight:
-    style: github-dark
+    style: "github-dark"
+    lineNos: true
+    lineNumbersInTable: false
+    noClasses: false
 related:
   threshold: 80
   includeNewer: true
