--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -72,7 +72,7 @@ taxonomies:
   author: authors
 markup:
   highlight:
-    style: "github-dark"
+    style: github-dark
     lineNos: true
     lineNumbersInTable: false
     noClasses: false
