--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -29,7 +29,7 @@ cascade:
       navbar:
         enable: true
 
-custom_css: css/custom.css
+
 ############################
 ## LANGUAGE
 ############################
@@ -71,6 +71,7 @@ taxonomies:
   category: categories
   author: authors
 markup:
+  _merge: deep
   highlight:
     style: github-dark
     lineNos: true
