--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -76,7 +76,7 @@ locale:
 # Site features
 features:
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
