hugo更新，支持vscode插件，本地启动

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -83,3 +83,23 @@ features:
     url: 'https://github.com/HugoBlox/hugo-blox-builder/'
     content_dir: starters/blog/content
     branch: main
+hugoblox:
+  theme:
+    pack: dracula
+    mode: dark
+    colors:
+      primary: ""
+      secondary: ""
+    colors_light:
+      primary: ""
+      secondary: ""
+      neutral: ""
+    colors_dark:
+      primary: ""
+      secondary: ""
+      neutral: ""
+  content:
+    math:
+      enable: true
+  layout:
+    radius: md
