--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -32,7 +32,7 @@ header:
     # Display the navigation bar?
     enable: true
     # Choose a built-in navigation blox or create your own
-    blox: "navbar"
+    block: "navbar"
     # Align menu links: `left`, `center`, or `right`
     align: "left"
     # Fix the navigation bar to the top of the page
