--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: "Yuan Qi's Blog" # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'http://http://8.137.104.191:1313/' # Website URL
 
 ############################
 ## PAGE OPTIONS
@@ -16,7 +16,7 @@ cascade:
       path: /blog/**
       kind: page
     pager: true
-    editable: true
+    editable: false
     hide_date: false
     show_date_updated: false
     reading_time: false
