--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,12 +2,9 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: 首页
     url: /
     weight: 10
-  - name: Topics
+  - name: 标签
     url: tags/
     weight: 20
-  - name: Uses
-    url: uses/
-    weight: 30
